my new furniture website

--- a/furniture.html
+++ b/furniture.html
@@ -104,12 +104,124 @@
       </div>
     </div>
   </body>
-
-  <body>
-    <p class="text-center">Email:xtianwoods@gmail.com</p>
-    <p class="text-center">Tel:+256-770648515</p>
-    <p class="text-center">Kampala-Ndeeba</p>
-  </body>
-
+  <div class="row">
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/coolest.jpg" target="_blank">
+          <img src="images/coolest.jpg" alt="Lights" style="width:100%">
+          <div class="caption">
+            <p>Prices are negotiable.</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/deka.jpg" target="_blank">
+          <img src="images/deka.jpg" alt="Nature" style="width:100%">
+          <div class="caption">
+            <p>Prices are negotiable.</p>
+          </div>
+        </a>
+      </div>
+    </div>
+    <div class="col-md-4">
+      <div class="thumbnail">
+        <a href="images/girly.jpg" target="_blank">
+          <img src="images/girly.jpg" alt="Fjords" style="width:100%">
+          <div class="caption">
+            <p>Prices are negotiable.</p>
+          </div>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
+</body><div class="row">
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <a href="images/nice.jpg" target="_blank">
+        <img src="images/nice.jpg" alt="Lights" style="width:100%">
+        <div class="caption">
+          <p>Prices are negotiable.</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <a href="images/pillow.jpg" target="_blank">
+        <img src="images/pillow.jpg" alt="Nature" style="width:100%">
+        <div class="caption">
+          <p>Prices are negotiable.</p>
+        </div>
+      </a>
+    </div>
+  </div>
+  <div class="col-md-4">
+    <div class="thumbnail">
+      <a href="images/best.jpg" target="_blank">
+        <img src="images/best.jpg" alt="Fjords" style="width:100%">
+        <div class="caption">
+          <p>Prices are negotiable.</p>
+        </div>
+      </a>
+    </div>
+  </div>
+</div>
+</div>
 </body>
+
+
+
+
+
+   
+  <!-- Footer -->
+<footer class="page-footer font-small cyan darken-3" style="background:rgb(12, 14, 17)">
+
+  <!-- Footer Elements -->
+  <div class="container">
+
+    <!-- Grid row-->
+    <div class="row">
+
+      <!-- Grid column -->
+      <div class="col-md-12 text-center py-5">
+        <div class="mb-5 flex-center">
+
+          <!-- Facebook -->
+          <a href="https://facebook.com" target="_blank"class="fb-ic">
+                       <img src="images/index.png" alt="Fjords" style="width:40px">
+          </a>
+          <!-- Twitter -->
+          <a href="https://twitter.com"_blank"class="tw-ic">
+                       <img src="images/twitter.png" alt="Fjords" style="width:40px">    
+          </a>
+          <!-- Google +-->
+          <a href="https://google.com" target="_blank"class="gplus-ic">
+                       <img src="images/google-plus.png" alt="Fjords" style="width:40px">
+          </a>
+          <!--Instagram-->
+          <a href="https://instagram.com" target="_blank"class="ins-ic">
+                       <img src="images/instagram.png" alt="Fjords" style="width:40px">
+          </a>
+        </div>
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row-->
+
+  </div>
+  <!-- Footer Elements -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2018 Copyright:
+    <a href="https://mdbootstrap.com/education/bootstrap/"> MDBootstrap.com</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
 </html>
