Jovy-cakes website

--- a/furniture.html
+++ b/furniture.html
@@ -68,7 +68,7 @@
   <div class="container">
       <p class="text-center">We believe it's always a right time to give your home and office a face lift with new furnishings from our furniture stores.</p>
       <p class="text-center">Come meet with our team and make your dreams a reality</p>
-      <p class="text-center">Prices are affordable and negotiable for our available produts, thank you!</p>
+      <p class="text-center">Prices are affordable and negotiable for our available products, thank you!</p>
       <div class="row">
         <div class="col-md-4">
           <div class="thumbnail">
